--- a/index.html
+++ b/index.html
@@ -1,9 +1,44 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Trial</title>
-  </head>
-  <body>
-    <p>This is a trial run</p>
-  </body>
+    <head>
+        <style>
+            .animate-charcter
+{
+   text-transform: uppercase;
+  background-image: linear-gradient(
+    -225deg,
+    #231557 0%,
+    #44107a 29%,
+    #ff1361 67%,
+    #fff800 100%
+  );
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 2s linear infinite;
+  display: inline-block;
+      font-size: 190px;
+}
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
+        </style>
+    </head>
+    <body>
+        <div class="container">
+            <div class="row">
+              <div class="col-md-12 text-center">
+                <h3 class="animate-charcter"> JerryMine is Gay</h3>
+              </div>
+            </div>
+          </div>
+    </body>
 </html>
